--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -b",
-    "dev": "node dist/index.js"
+    "dev": "node dist/index.js",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
